# using_Rust_in_Python_on_the_example_of_reading_dicom_files

./: Cargo.toml  README.md
python/: example.py  py_dcm_finder_rs.pyd
src/: dir_scan.rs  lib.rs
